# ex4

./: details.txt
comp/: graphs.txt  solution.txt
src/: AStarSearcher.cpp  AStarSearcher.h  AirDistanceHeuristicFunction.cpp  AirDistanceHeuristicFunction.h  BFSSearcher.cpp  BFSSearcher.h  BreadthFirstSearchSearcher.cpp  BreadthFirstSearchSearcher.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFSSearcher.cpp  DFSSearcher.h  FileCacheManager.cpp  FileCacheManager.h  HeuristicFunction.h  Main1.cpp  Main1.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Node.cpp  Node.h  Pair.cpp  Pair.h  Searchable.h  Searcher.h  SearcherSolver.cpp  SearcherSolver.h  Server.h  Solver.h  State.cpp  State.h  (+5 more)
